move license check to PublishExtensionVersionHandler to be able to roll back the transaction if the check fails